# portal-ai

./: .gitignore  Makefile  README.md  directory_tree.py  example.Makefile  example.global_settings.yml  global_settings.example.yml  global_settings.yaml  global_settings.yml  pyproject.toml  requirements.txt  root.yml  setup.py
dev/: aws_base_outputs.yml  global_settings.yml
dev/kops/: cluster_build.yml  gpu_instance_groups.yml
dev/kops/input_configs/: _inputs.tmpl.yml  current_generated_config.yml  kops_base_configs.yml
dev/kops/nvidia/: cuda_test.yml  test.yml
dev/rbac/input_configs/: _inputs.tmpl.yml  mage_generated_config.yml  mage_rbac_configs.yml
dev/templates/: aws_base_outputs.tmpl.j2  global_settings.tmpl.j2  helm_chart_values.tmpl.j2  kops_custom_settings.tmpl.j2  mage_rbac_mgmt.j2
dev/terraform/aws_base/: main.tf  remote.tf
dev/terraform/databricks/: remote.tf
dev/terraform/helm/: main.tf  providers.tf  remote.tf
dev/terraform/kops/: kubernetes.tf  remote.tf
dev/terraform/snowflake/: remote.tf
documentation/folder_trees/: tools_tree.md
portal_ai/: .gitignore  global_settings.yml  setup.py
portal_ai/aws/boto_s3/: boto.py
portal_ai/constant_configs/aws/: efs.yml
portal_ai/constant_configs/portal-ai/: constants.yml
portal_ai/deployments/: aggregate_configs.py  initialize.py  update_helm_values_files.py
portal_ai/destroy/: destroy.py
portal_ai/docker/jupyter-lab/: Dockerfile  pyproject.toml
portal_ai/docs/portal-docs/: doc-websites.code-workspace  docusaurus.config.js
portal_ai/documentation/folder_trees/: portal_ai.k8s.helm.charts_tree.md
portal_ai/scripts/docker/: build_push.sh
portal_ai/scripts/kops/: create_cluster.sh
portal_ai/settings/: get_environment.py  load_global_settings.py  load_settings.py  logger.py
portal_ai/setup/: aws_settings.py  init_global_settings.py  key_gen.py  tf_remote_states.py
portal_ai/setup_constants/aws/: ubuntu_images.yml
portal_ai/setup_constants/portal-ai/: constants.yml
portal_ai/templating/templates/: aws_base_outputs.tmpl.j2  global_settings_base.tmpl.j2  helm_chart_values.tmpl.j2  kops_cluster_config.tmpl.j2  kops_gpu_nodes_config.tmpl.j2  kops_instance_groups_config.tmpl.j2  kops_settings_base.tmpl.j2  mage_rbac_backend.tmpl.j2
portal_ai/templating/yaml/: kops_zones.py  yaml_manager.py
portal_ai/terraform/aws_base/: main.tf  providers.tf  remote.tf
portal_ai/terraform/helm/: main.tf  providers.tf  remote.tf
portal_ai/tests/settings/: dir_test.py
portal_ai/tests/setup/: key_gen_test.py
setup/: key_gen.py
tests/settings/: dir_test.py
tools/: settings.py
tools/auth/: aws_auth.py
tools/common/: boto.py  load_global_settings.py  make_dir.py
tools/deployments/aws_base/: remote_s3_buckets.py  tf_remote_states.py
tools/deployments/helm/: init_secret_backends.py
tools/deployments/setup/: key_gen.py  ubuntu_images.py
tools/documentation/: directory_tree.py
tools/scripts/aws_sso/: sso_profile_auth.sh
tools/scripts/docker/: build_push.sh
tools/scripts/helm/: nginx_proxyv2.sh  vault_init.sh  (+2 more)
(+356 files in other folders)
