[tool.poetry]
name = "portal-ai"
version = "0.0.1"
description = "Portal-AI is a tool for deploying AWS infrastructure to run GPU accelerated workflows and websites for LLMs."
authors = ["Schlafdata <john@schlafdata.com>"]
readme = "README.md"
license = ""

[tool.poetry.dependencies]
python = ">=3.10"
# Add your project dependencies here. For example:
# numpy = "^1.21.2"
# pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
# Add your development dependencies here. For example:
# pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/jschlafdata/portal-ai/portal_ai"